--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -3,4 +3,10 @@
     <h1>Home Page</h1>
 
     <p>{{ vm.message }}</p>
+
+    
 </div>
+
+<video>
+    <source src="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv" type='video/x-matroska'>
+</video>
