--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -7,6 +7,8 @@
     
 </div>
 
-<video>
-    <source src="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv" type='video/x-matroska'>
-</video>
+<!-- <video>
+    <source src="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv"  type="video/mp4">>
+</video> -->
+<video width='1024' height='768' controls autoplay> 
+<source src="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv" type='video/x-matroska'</video>
