--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -12,5 +12,6 @@
 </video> -->
 <!-- <video width='1024' height='768' controls autoplay> 
 <source src="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv" type='video/'</video> -->
-<embed  type="video/x-matroska" width="1024" height="768" 
-src ="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv" autoPlay="true"></embed>
+<!-- <embed  type="video/x-matroska" width="1024" height="768" 
+src ="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv" autoPlay="true"></embed> -->
+<video src="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv" type='video/x-matroska; codecs="theora, vorbis"' autoplay controls ></video>
