--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -14,4 +14,4 @@
 <source src="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv" type='video/'</video> -->
 <!-- <embed  type="video/x-matroska" width="1024" height="768" 
 src ="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv" autoPlay="true"></embed> -->
-<video src="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv" type='video/x-matroska; codecs="theora, vorbis"' autoplay controls ></video>
+<video width="100%" height="100%" poster="" preload="auto" style="height: 557px;" src="http://fs.to/get/dl/5q1zymtwdqy6dj5crtchcrn2e.0.1139013157.974127405.1452032606/The.Listener.S05E04.720p.WEB-DL.Rus.Eng.FOX.mkv"><source src="" type="video/mp4"></video>
